- UTC timestamp now recognized in startDate & endDate fields from Duplicati emails (feature currently unused, prepping for upcoming Duplicati release feature)
- Database & .rc file upgrades now handled automatically
- Logging information generated before log files are opened is now captured and saved
- Using HTML <detail> tags in message/warning/error output to clean up the HTML report. Not supported in all browsers or email clients, so end user experience may vary.
- Ability to roll back database to a specific time/date (-b option). Useful for failed runs or testing.
- Changed bahavior of -i option (again!). After initialization, if program can continue, it will. Also eliminated undocumented -I option.
- Ability to remove a source/destination pair from the database if it is no longer in use (-m option)
- Purge emails that are no longer on the server from the database. (-p option or [main] purgedb in .rc file)


2.0.4
-----
Issue #18, #19, #21 - Several iterations of fixes for these issues. Should now be able to handle most
            global date formats. Probably.

2.0.3
-----
Issue #1 - Initialization with -i option will now always stop program after initialization. 
           Non-critical changes/updates to the .rc file will now allow the program to continue 
           with default option configs.
Issue #7 - Fixed the way failed backup jobs are parsed & reported.
Issue #8 - Flush file buffer after every log write
Issue #10 - Added ability to sort the report by source or destination
Issue #12 - Added level 3 logging and changed logging scheme
Issue #13 - Fixed 24-hour date conversion errors
Issue #14 - Deal with binary-encoded messages from mutant email senders.
Non-Specific:
    - general code cleanup and beautification


2.0.2
-----
Issue #5:
- Subject found but no delimiter found. Program now abandons message with a level 2 log message.
- Regular expression used as delimiter character. Delimiter character now escaped by using re.escape() around variable